integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__feat_search_assets_negation-with_negation.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "grand_total": 0,
  "total": 0,
  "limit": 1,
  "page": 1,
  "items": []
}
