integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__t22_native_metadata.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "interface": "Custom",
  "id": "Aeg1zJKqECmspy5h9xMhp6VvtSjzW2acgBp2n4YjePkX",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "",
    "files": [],
    "metadata": {
      "name": "OPOS",
      "symbol": "OPOS",
      "uri": "https://raw.githubusercontent.com/solana-developers/opos-asset/main/assets/DeveloperPortal/metadata.json"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "scopes": [
        "metadata"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token",
    "owner": ""
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "mint_extensions": {
    "metadata": {
      "uri": "https://raw.githubusercontent.com/solana-developers/opos-asset/main/assets/DeveloperPortal/metadata.json",
      "mint": [
        143,
        95,
        201,
        250,
        29,
        116,
        146,
        56,
        70,
        225,
        49,
        204,
        198,
        206,
        45,
        221,
        119,
        47,
        127,
        119,
        244,
        238,
        93,
        175,
        163,
        34,
        141,
        69,
        91,
        236,
        183,
        252
      ],
      "name": "OPOS",
      "symbol": "OPOS",
      "update_authority": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "additional_metadata": []
    },
    "metadata_pointer": {
      "authority": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "metadata_address": "Aeg1zJKqECmspy5h9xMhp6VvtSjzW2acgBp2n4YjePkX"
    }
  },
  "token_info": {
    "supply": 1,
    "decimals": 0,
    "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
  }
}
